--- a/WEB_KTX_Management/WEB_KTX_Management/WEB_KTX_Management.csproj
+++ b/WEB_KTX_Management/WEB_KTX_Management/WEB_KTX_Management.csproj
@@ -133,6 +133,7 @@
     </Compile>
     <Compile Include="Models\NhanVien.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Response\SinhVienResponse.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
@@ -218,6 +219,7 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\NhanVien\ListNhanVien.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
