--- a/WEB_KTX_Management/WEB_KTX_Management/Web.config
+++ b/WEB_KTX_Management/WEB_KTX_Management/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=152368
@@ -9,7 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-WEB_KTX_Management-20201206160335;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-WEB_KTX_Management-20201206160335.mdf" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-WEB_KTX_Management-20201206160335;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-WEB_KTX_Management-20201206160335.mdf"
+      providerName="System.Data.SqlClient" />
+    <add name="KTX_ManagementConnectionString" connectionString="Data Source=DESKTOP-RAA63FM\SQLEXPRESS;Initial Catalog=KTX_Management;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
