update create contract

--- a/KTX_Management/KTX_Management/KTX_Management.csproj
+++ b/KTX_Management/KTX_Management/KTX_Management.csproj
@@ -263,6 +263,7 @@
     <Content Include="Views\HopDong\GoToChiTietHopDong.cshtml" />
     <Content Include="Views\TraCuu\TraCuu.cshtml" />
     <Content Include="Views\TraCuu\KetQuaTraCuu.cshtml" />
+    <Content Include="Views\HopDong\TaoHopDong.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
